Fix col collapsing (avoid flex-basis default because of shorthand) Flex shorthand uses a default value for flex-basis that collapses if growth is not possible

--- a/ungrid-flex-prefix.css
+++ b/ungrid-flex-prefix.css
@@ -3,5 +3,5 @@
         display: -webkit-flex; -webkit-flex-wrap: nowrap;
         display: flex; flex-wrap: nowrap;
     }
-    .col { -webkit-flex-grow: 1; flex: 1; }
+    .col { -webkit-flex-grow: 1; flex-grow: 1; }
 }
