--- a/ungrid-flex.css
+++ b/ungrid-flex.css
@@ -1,4 +1,4 @@
 @media (min-width: 30em) {
     .row { display: flex; flex-wrap: nowrap; }
-    .col { flex: 1; }
+    .col { flex-grow: 1; }
 }
